syntax = "proto3";

package media;

service MediaService {
  rpc DownloadMedia (MediaRequest) returns (MediaResponse);
}

message MediaRequest {
  string media_id = 1;
  string media_type = 2;
}

message MediaResponse {
  bytes media_data = 1;
  string media_type = 2;
}

